--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ sublime2/User/Package\ Control.sublime-settings
 sublime2/User/Package Control.last-run
 git/gitconfig.symlink
 *~
+emacs/emacs.d/ido.last
+emacs/emacs.d/recentf
